# mwclient-cli

./: .gitignore  README.md  SKILL.md  context7.json  pyproject.toml  requirements.txt
mwcli/: __init__.py  cli.py
mwclient-cli/: __init__.py  cli.py
mwclient_cli/: __init__.py  cli.py
skills/mwclient-cli/: SKILL.md
skills/mwclient-cli/evals/: trigger-eval.json
tests/: test_cli.py
