[project]
name = "mwclient-cli"
version = "0.1.0"
description = "CLI wrapper around mwclient"
authors = [
  { name="vedmaka" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mwclient==0.11.0",
  "html2text==2025.4.15",
]

[project.optional-dependencies]
test = [
  "pytest==9.0.2",
]

[project.scripts]
mwcli = "mwclient-cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mwclient-cli"]

[project.urls]
Homepage = "https://github.com/vedmaka/mwclient-cli"
